Game loop logic fixes for easier understanding.